--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,9 +1,35 @@
-.sss {
-    box-shadow: 6px 10px 15px 15px rgba(0, 0, 0, 0.2);
-    padding: 16px;
-    height: 100%;
+.form-group{
+    width: 400px;
+    background: #fff;
+    border: 1px solid #dddfe2;
+    box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
+    border-radius: 8px;
+    padding: 1rem;
     text-align: center;
-   margin-top: 85px;
-   border-radius: 15px;
-    
-  }
+}
+
+
+.form-group > input {
+    border-radius: 8px;
+    border: 2px solid #dddfe2;
+    outline: none;
+    color: #1d2129;
+    margin: 0.5rem 0;
+    padding: 0.5rem 0.75rem;
+    width: 92%;
+    font-size: 1rem;
+}
+.form-group > button {
+    background: #1877f2;
+    border: 1px solid #1877f2;
+    color: #fff;
+    font-size: 1.25rem;
+    padding: 0.5rem;
+    margin: 0.5rem 0;
+    border-radius: 8px;
+    outline: none;
+    cursor: pointer;
+}
+.logo{
+    font-size: 3.5rem;
+}
